--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,3 +16,4 @@ services:
       SSL_MODE: disable
       JWT_SECRET: your_32_byte_secret_key_here_abcd
       APP_PORT: 8080
+      GIN_MODE: release
