--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: go_gin_app
+    container_name: gin-quickstart
     ports:
       - "${APP_PORT:-8080}:8080"
     environment:
